--- a/RecGlobe/app/src/main/res/layout/activity_main.xml
+++ b/RecGlobe/app/src/main/res/layout/activity_main.xml
@@ -14,4 +14,29 @@
         app:rotation_degrees="15.5"
         tools:context=".MyActivity" />
 
+    <Button
+        android:id="@+id/profile"
+        android:layout_width="169dp"
+        android:layout_height="48dp"
+        android:layout_gravity="center"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginBottom="16dp"
+        android:text="my profile"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/message"
+        android:layout_width="169dp"
+        android:layout_height="48dp"
+        android:layout_gravity="center"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="16dp"
+        android:text="message"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+
 </android.support.constraint.ConstraintLayout>
