--- a/RecGlobe/app/src/main/res/layout/activity_athlete_profile.xml
+++ b/RecGlobe/app/src/main/res/layout/activity_athlete_profile.xml
@@ -100,14 +100,17 @@
                 app:layout_constraintTop_toBottomOf="@+id/bio"
                 tools:layout_editor_absoluteX="0dp">
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal" >
                 <TextView
                     android:id="@+id/fnamelabel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="50dp"
                     android:layout_marginLeft="50dp"
                     android:layout_marginTop="30dp"
-                    android:layout_marginBottom="3dp"
+                    android:layout_marginBottom="10dp"
                     android:text="First Name"
                     android:textStyle="bold" />
 
@@ -115,19 +118,24 @@
                     android:id="@+id/fname"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginRight="50dp"
-                    android:layout_marginBottom="5dp"
+                    android:layout_marginLeft="58dp"
+                    android:layout_marginTop="30dp"
                     android:ems="10"
                     android:text="temp" />
+                </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal" >
 
                 <TextView
                     android:id="@+id/lnamelabel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="50dp"
                     android:layout_marginLeft="50dp"
-                    android:layout_marginBottom="3dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
                     android:text="Last Name"
                     android:textStyle="bold" />
 
@@ -135,20 +143,23 @@
                     android:id="@+id/lname"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginRight="50dp"
-                    android:layout_marginBottom="5dp"
+                    android:layout_marginLeft="60dp"
+                    android:layout_marginTop="10dp"
                     android:ems="10"
                     android:text="temp" />
+            </LinearLayout>
 
-
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal" >
                 <TextView
                     android:id="@+id/phonelabel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="50dp"
+                    android:layout_marginTop="10dp"
                     android:layout_marginLeft="50dp"
-                    android:layout_marginBottom="3dp"
+                    android:layout_marginBottom="10dp"
                     android:text="Phone Number"
                     android:textStyle="bold" />
 
@@ -157,19 +168,27 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:layout_marginTop="10dp"
                     android:layout_marginRight="50dp"
-                    android:layout_marginBottom="5dp"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginLeft="33dp"
                     android:ems="10"
                     android:text="temp" />
 
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal" >
 
                 <TextView
                     android:id="@+id/citylabel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="50dp"
                     android:layout_marginLeft="50dp"
-                    android:layout_marginBottom="3dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
                     android:text="City"
                     android:textStyle="bold" />
 
@@ -177,19 +196,23 @@
                     android:id="@+id/city"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginRight="50dp"
-                    android:layout_marginBottom="5dp"
+                    android:layout_marginLeft="103dp"
+                    android:layout_marginTop="10dp"
                     android:ems="10"
                     android:text="temp" />
+            </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal" >
                 <TextView
                     android:id="@+id/statelabel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="50dp"
                     android:layout_marginLeft="50dp"
-                    android:layout_marginBottom="3dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
                     android:text="State"
                     android:textStyle="bold" />
 
@@ -197,19 +220,24 @@
                     android:id="@+id/state"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginRight="50dp"
-                    android:layout_marginBottom="5dp"
+                    android:layout_marginLeft="95dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
                     android:ems="10"
                     android:text="temp" />
+            </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal" >
                 <TextView
                     android:id="@+id/countrylabel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="50dp"
                     android:layout_marginLeft="50dp"
-                    android:layout_marginBottom="3dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
                     android:text="Country"
                     android:textStyle="bold" />
 
@@ -217,19 +245,24 @@
                     android:id="@+id/country"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginRight="50dp"
-                    android:layout_marginBottom="5dp"
+                    android:layout_marginLeft="77dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
                     android:ems="10"
                     android:text="temp" />
+            </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal" >
                 <TextView
                     android:id="@+id/teamlabel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="50dp"
                     android:layout_marginLeft="50dp"
-                    android:layout_marginBottom="3dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
                     android:text="Team"
                     android:textStyle="bold" />
 
@@ -237,19 +270,24 @@
                     android:id="@+id/team"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginRight="50dp"
-                    android:layout_marginBottom="5dp"
+                    android:layout_marginLeft="91dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
                     android:ems="10"
                     android:text="temp" />
+            </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal" >
                 <TextView
                     android:id="@+id/utrlabel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="50dp"
                     android:layout_marginLeft="50dp"
-                    android:layout_marginBottom="3dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
                     android:text="UTR"
                     android:textStyle="bold" />
 
@@ -257,20 +295,24 @@
                     android:id="@+id/utr"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginRight="50dp"
-                    android:layout_marginBottom="5dp"
+                    android:layout_marginLeft="100dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
                     android:ems="10"
                     android:text="temp" />
+            </LinearLayout>
 
-
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal" >
                 <TextView
                     android:id="@+id/natranklabel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="50dp"
                     android:layout_marginLeft="50dp"
-                    android:layout_marginBottom="3dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
                     android:text="National Ranking"
                     android:textStyle="bold" />
 
@@ -278,20 +320,24 @@
                     android:id="@+id/natrank"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginRight="50dp"
-                    android:layout_marginBottom="5dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
                     android:ems="10"
                     android:text="temp" />
+            </LinearLayout>
 
-
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal" >
                 <TextView
                     android:id="@+id/awardlabel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="50dp"
                     android:layout_marginLeft="50dp"
-                    android:layout_marginBottom="3dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
                     android:text="Award"
                     android:textStyle="bold" />
 
@@ -299,31 +345,37 @@
                     android:id="@+id/award"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginRight="50dp"
-                    android:layout_marginBottom="5dp"
+                    android:layout_marginLeft="86dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
                     android:ems="10"
                     android:text="temp" />
+            </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal" >
                 <TextView
                     android:id="@+id/linklabel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="50dp"
                     android:layout_marginLeft="50dp"
-                    android:layout_marginBottom="3dp"
-                    android:text="Award"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:text="Link"
                     android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/link"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginRight="50dp"
-                    android:layout_marginBottom="5dp"
+                    android:layout_marginLeft="99dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
                     android:ems="10"
                     android:text="temp" />
+            </LinearLayout>
 
 
             </LinearLayout>
