created coach profile
and implemented go back and logout

--- a/RecGlobe/app/src/main/res/layout/activity_athlete_profile.xml
+++ b/RecGlobe/app/src/main/res/layout/activity_athlete_profile.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".AthleteProfileActivity">
 
+
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
@@ -111,6 +112,7 @@
                     android:layout_marginLeft="50dp"
                     android:layout_marginTop="30dp"
                     android:layout_marginBottom="10dp"
+                    android:layout_weight="0"
                     android:text="First Name"
                     android:textStyle="bold" />
 
@@ -136,6 +138,7 @@
                     android:layout_marginLeft="50dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="10dp"
+                    android:layout_weight="0"
                     android:text="Last Name"
                     android:textStyle="bold" />
 
@@ -157,6 +160,7 @@
                     android:id="@+id/phonelabel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_weight="0"
                     android:layout_marginTop="10dp"
                     android:layout_marginLeft="50dp"
                     android:layout_marginBottom="10dp"
@@ -186,6 +190,7 @@
                     android:id="@+id/citylabel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_weight="0"
                     android:layout_marginLeft="50dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="10dp"
@@ -210,6 +215,7 @@
                     android:id="@+id/statelabel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_weight="0"
                     android:layout_marginLeft="50dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="10dp"
@@ -235,6 +241,7 @@
                     android:id="@+id/countrylabel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_weight="0"
                     android:layout_marginLeft="50dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="10dp"
@@ -260,6 +267,7 @@
                     android:id="@+id/teamlabel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_weight="0"
                     android:layout_marginLeft="50dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="10dp"
@@ -285,6 +293,7 @@
                     android:id="@+id/utrlabel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_weight="0"
                     android:layout_marginLeft="50dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="10dp"
@@ -310,6 +319,7 @@
                     android:id="@+id/natranklabel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_weight="0"
                     android:layout_marginLeft="50dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="10dp"
@@ -335,6 +345,7 @@
                     android:id="@+id/awardlabel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_weight="0"
                     android:layout_marginLeft="50dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="10dp"
@@ -360,6 +371,7 @@
                     android:id="@+id/linklabel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_weight="0"
                     android:layout_marginLeft="50dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="10dp"
