--- a/RecGlobe/app/src/main/res/layout/item_chat.xml
+++ b/RecGlobe/app/src/main/res/layout/item_chat.xml
@@ -8,6 +8,7 @@
         android:padding="20sp"
         android:id="@+id/action_container">
         <TextView
+            android:paddingBottom="20sp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Text"
