--- a/RecGlobe/app/src/main/res/layout/item2.xml
+++ b/RecGlobe/app/src/main/res/layout/item2.xml
@@ -16,7 +16,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-
+        app:cardConerRadius="4dp"
         android:elevation="2dp"
         android:id="@+id/cardView">
 
