--- a/RecGlobe/app/src/main/res/layout/item2.xml
+++ b/RecGlobe/app/src/main/res/layout/item2.xml
@@ -13,31 +13,91 @@
     android:clipToPadding="false">
 
     <android.support.v7.widget.CardView
+        android:id="@+id/cardView"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="522dp"
         android:layout_gravity="center"
-        android:elevation="2dp"
-        android:id="@+id/cardView">
+        android:elevation="2dp">
 
-        <FrameLayout
+        <RelativeLayout
             android:layout_width="300dp"
-            android:layout_height="400dp"
-            android:layout_marginTop="5dp">
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:orientation="vertical">
 
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/image"/>
+
             <TextView
                 android:id="@+id/name"
-                android:textSize="40sp"
-                android:textColor="@android:color/black"
-                android:gravity="center"
-                tools:text="hello"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:gravity="center|top"
+                android:paddingLeft="20sp"
+                android:textColor="@android:color/black"
+                android:textSize="30sp"
+                tools:text="name" />
 
-        </FrameLayout>
+
+            <ImageView
+                android:id="@+id/image"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                android:layout_marginTop="45dp"
+                android:paddingTop="40dp"
+                android:paddingBottom="10dp"
+                android:scaleType="centerCrop" />
+
+
+            <TextView
+                android:id="@+id/utrlabel"
+                android:layout_width="83dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginStart="0dp"
+                android:layout_marginLeft="0dp"
+                android:layout_marginEnd="11dp"
+                android:layout_marginRight="11dp"
+                android:layout_marginBottom="131dp"
+                android:layout_toStartOf="@+id/utr"
+                android:layout_toLeftOf="@+id/utr"
+                android:paddingLeft="20sp"
+                android:textColor="@android:color/black"
+                android:textSize="20sp"
+                tools:text="UTR:" />
+
+            <TextView
+                android:id="@+id/utr"
+                android:layout_width="199dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginEnd="7dp"
+                android:layout_marginRight="7dp"
+                android:layout_marginBottom="132dp"
+                android:paddingLeft="20sp"
+                android:textColor="@android:color/black"
+                android:textSize="20sp"
+                tools:text="UTR" />
+
+            <TextView
+                android:id="@+id/uni"
+                android:layout_width="199dp"
+                android:layout_height="wrap_content"
+                android:layout_alignEnd="@+id/utr"
+                android:layout_alignRight="@+id/utr"
+                android:layout_alignParentBottom="true"
+                android:layout_marginEnd="-1dp"
+                android:layout_marginRight="-1dp"
+                android:layout_marginBottom="98dp"
+                android:paddingLeft="20sp"
+                android:textColor="@android:color/black"
+                android:textSize="20sp"
+                tools:text="University" />
+
+
+        </RelativeLayout>
 
     </android.support.v7.widget.CardView>
 
