--- a/RecGlobe/app/src/main/res/layout/item2.xml
+++ b/RecGlobe/app/src/main/res/layout/item2.xml
@@ -14,8 +14,8 @@
 
     <android.support.v7.widget.CardView
         android:id="@+id/cardView"
-        android:layout_width="wrap_content"
-        android:layout_height="522dp"
+        android:layout_width="match_parent"
+        android:layout_height="422dp"
         android:layout_gravity="center"
         android:elevation="2dp">
 
@@ -48,53 +48,68 @@
 
 
             <TextView
-                android:id="@+id/utrlabel"
-                android:layout_width="83dp"
+                android:id="@+id/unilabel"
+                android:layout_width="142dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentBottom="true"
                 android:layout_marginStart="0dp"
                 android:layout_marginLeft="0dp"
-                android:layout_marginEnd="11dp"
-                android:layout_marginRight="11dp"
-                android:layout_marginBottom="131dp"
-                android:layout_toStartOf="@+id/utr"
-                android:layout_toLeftOf="@+id/utr"
+                android:layout_marginBottom="151dp"
                 android:paddingLeft="20sp"
+                android:paddingRight="0dp"
                 android:textColor="@android:color/black"
-                android:textSize="20sp"
-                tools:text="UTR:" />
+                android:textSize="18sp"
+                android:textStyle="bold"
+                tools:text="University:" />
 
             <TextView
-                android:id="@+id/utr"
-                android:layout_width="199dp"
+                android:id="@+id/university"
+                android:layout_width="207dp"
                 android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="true"
-                android:layout_marginEnd="7dp"
-                android:layout_marginRight="7dp"
-                android:layout_marginBottom="132dp"
+                android:layout_marginStart="0dp"
+                android:layout_marginLeft="0dp"
+                android:layout_marginEnd="93dp"
+                android:layout_marginRight="93dp"
+                android:layout_marginBottom="124dp"
                 android:paddingLeft="20sp"
                 android:textColor="@android:color/black"
-                android:textSize="20sp"
-                tools:text="UTR" />
+                android:textSize="17sp"
+                tools:text="University" />
+
 
             <TextView
-                android:id="@+id/uni"
-                android:layout_width="199dp"
-                android:layout_height="wrap_content"
-                android:layout_alignEnd="@+id/utr"
-                android:layout_alignRight="@+id/utr"
+                android:id="@+id/biolabel"
+                android:layout_width="113dp"
+                android:layout_height="25dp"
                 android:layout_alignParentBottom="true"
-                android:layout_marginEnd="-1dp"
-                android:layout_marginRight="-1dp"
-                android:layout_marginBottom="98dp"
+                android:layout_marginBottom="94dp"
                 android:paddingLeft="20sp"
                 android:textColor="@android:color/black"
-                android:textSize="20sp"
-                tools:text="University" />
+                android:textSize="18sp"
+                android:textStyle="bold"
+                tools:text="Bio:" />
+
+            <TextView
+                android:id="@+id/bio"
+                android:layout_width="match_parent"
+                android:layout_height="89dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginStart="0dp"
+                android:layout_marginLeft="0dp"
+                android:layout_marginBottom="0dp"
+                android:paddingLeft="20sp"
+                android:textColor="@android:color/black"
+                android:textSize="17sp"
+                tools:text="Bio" />
 
 
         </RelativeLayout>
