--- a/RecGlobe/app/src/main/res/layout/item.xml
+++ b/RecGlobe/app/src/main/res/layout/item.xml
@@ -39,9 +39,18 @@
 
             <ImageView
                 android:id="@+id/image"
-                android:layout_width="match_parent"
-                android:layout_height="300dp"
+                android:layout_width="250dp"
+                android:layout_height="200dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_gravity="center"
+                android:layout_marginStart="25dp"
+                android:layout_marginLeft="21dp"
                 android:layout_marginTop="45dp"
+                android:layout_marginEnd="25dp"
+                android:layout_marginRight="29dp"
                 android:paddingTop="40dp"
                 android:paddingBottom="10dp"
                 android:scaleType="centerCrop" />
