--- a/RecGlobe/app/src/main/res/layout/item.xml
+++ b/RecGlobe/app/src/main/res/layout/item.xml
@@ -15,7 +15,7 @@
     <android.support.v7.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="match_parent"
-        android:layout_height="422dp"
+        android:layout_height="520dp"
         android:layout_gravity="center"
         android:elevation="2dp">
 
@@ -39,18 +39,18 @@
 
             <ImageView
                 android:id="@+id/image"
-                android:layout_width="250dp"
-                android:layout_height="200dp"
+                android:layout_width="277dp"
+                android:layout_height="285dp"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
                 android:layout_gravity="center"
-                android:layout_marginStart="25dp"
-                android:layout_marginLeft="21dp"
+                android:layout_marginStart="0dp"
+                android:layout_marginLeft="0dp"
                 android:layout_marginTop="45dp"
-                android:layout_marginEnd="25dp"
-                android:layout_marginRight="29dp"
+                android:layout_marginEnd="3dp"
+                android:layout_marginRight="0dp"
                 android:paddingTop="40dp"
                 android:paddingBottom="10dp"
                 android:scaleType="centerCrop" />
@@ -71,7 +71,7 @@
                 android:textColor="@android:color/black"
                 android:textSize="18sp"
                 android:textStyle="bold"
-                tools:text="UTR:" />
+                android:text="UTR:" />
 
             <TextView
                 android:id="@+id/utr"
@@ -90,7 +90,7 @@
                 android:paddingLeft="20sp"
                 android:textColor="@android:color/black"
                 android:textSize="17sp"
-                tools:text="UTR" />
+                android:text="UTR" />
 
             <TextView
                 android:id="@+id/natranklabel"
@@ -106,7 +106,7 @@
                 android:textColor="@android:color/black"
                 android:textSize="18sp"
                 android:textStyle="bold"
-                tools:text="National Ranking:" />
+                android:text="National Ranking:" />
 
 
             <TextView
@@ -122,7 +122,7 @@
                 android:paddingLeft="20sp"
                 android:textColor="@android:color/black"
                 android:textSize="17sp"
-                tools:text="natrank" />
+                android:text="natrank" />
 
             <TextView
                 android:id="@+id/biolabel"
@@ -134,7 +134,7 @@
                 android:textColor="@android:color/black"
                 android:textSize="18sp"
                 android:textStyle="bold"
-                tools:text="Bio:" />
+                android:text="Bio:" />
 
             <TextView
                 android:id="@+id/bio"
@@ -149,7 +149,7 @@
                 android:paddingLeft="20sp"
                 android:textColor="@android:color/black"
                 android:textSize="17sp"
-                tools:text="Bio" />
+                android:text="Bio" />
 
 
         </RelativeLayout>
