--- a/RecGlobe/app/src/main/res/layout/item2.xml
+++ b/RecGlobe/app/src/main/res/layout/item2.xml
@@ -15,7 +15,7 @@
     <android.support.v7.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="match_parent"
-        android:layout_height="422dp"
+        android:layout_height="520dp"
         android:layout_gravity="center"
         android:elevation="2dp">
 
@@ -39,18 +39,18 @@
 
             <ImageView
                 android:id="@+id/image"
-                android:layout_width="250dp"
-                android:layout_height="200dp"
+                android:layout_width="277dp"
+                android:layout_height="285dp"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
                 android:layout_gravity="center"
-                android:layout_marginStart="25dp"
-                android:layout_marginLeft="21dp"
+                android:layout_marginStart="0dp"
+                android:layout_marginLeft="0dp"
                 android:layout_marginTop="45dp"
-                android:layout_marginEnd="25dp"
-                android:layout_marginRight="29dp"
+                android:layout_marginEnd="3dp"
+                android:layout_marginRight="0dp"
                 android:paddingTop="40dp"
                 android:paddingBottom="10dp"
                 android:scaleType="centerCrop" />
@@ -71,7 +71,7 @@
                 android:textColor="@android:color/black"
                 android:textSize="18sp"
                 android:textStyle="bold"
-                tools:text="University:" />
+                android:text="University:" />
 
             <TextView
                 android:id="@+id/university"
@@ -103,7 +103,7 @@
                 android:textColor="@android:color/black"
                 android:textSize="18sp"
                 android:textStyle="bold"
-                tools:text="Bio:" />
+                android:text="Bio:" />
 
             <TextView
                 android:id="@+id/bio"
