--- a/RecGlobe/app/src/main/res/layout/activity_coach_profile.xml
+++ b/RecGlobe/app/src/main/res/layout/activity_coach_profile.xml
@@ -34,7 +34,7 @@
     tools:srcCompat="@tools:sample/avatars[11]" />-->
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/athlete_profile_pic"
+        android:id="@+id/coach_profile_pic"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_gravity="center"
