--- a/RecGlobe/app/src/main/res/layout/activity_chat.xml
+++ b/RecGlobe/app/src/main/res/layout/activity_chat.xml
@@ -1,22 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Chat.ChatActivity">
-
+    tools:context="com.example.recruiterglobe.Chat.ChatActivity">
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <android.support.v7.widget.RecyclerViewe
-            android:id="@+id/recyclewView"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/sendLayout">
+        <android.support.v7.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:id="@+id/recyclerView"
             android:scrollbars="vertical">
-
-        </android.support.v7.widget.RecyclerViewe>
+        </android.support.v7.widget.RecyclerView>
     </android.support.v4.widget.NestedScrollView>
     <LinearLayout
         android:id="@+id/sendLayout"
@@ -36,10 +35,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="Send"
-            android:id="@+id/send"
-            />
+            android:id="@+id/send"/>
     </LinearLayout>
-
-
 
 </RelativeLayout>
